--- a/src/rollup-project/main.css
+++ b/src/rollup-project/main.css
@@ -6,3 +6,7 @@ html {
     background-color: var(--main-bg-color);
     font-family: monospace;
 }
+
+.mr-2 {
+    margin-right: .5rem!important;
+}
