--- a/src/public/main.css
+++ b/src/public/main.css
@@ -2,6 +2,10 @@
     --main-bg-color: #f3f3f3;
 }
 
+#testing-css {
+    border-bottom: 2px solid red;
+}
+
 html {
     background-color: var(--main-bg-color);
     font-family: monospace;
