--- a/src/client/main.css
+++ b/src/client/main.css
@@ -1,3 +1,67 @@
+@font-face {
+    font-family: 'Amstelvar';
+    src: url('./assets/Amstelvar-Roman[wdth,wght,opsz].ttf') format('truetype-variations');
+    font-weight: 100 900;
+    font-stretch: 50% 125%;
+    --in-canvas: true;
+}
+
+@font-face {
+    font-family: 'Anybody';
+    src: url('./assets/Anybody[slnt,wdth,wght].ttf') format('truetype-variations');
+    font-weight: 100 900;
+    font-stretch: 10% 400%;
+    --in-canvas: true;
+}
+
+@font-face {
+    font-family: 'Barlow';
+    src: url('./assets/BarlowGX.ttf') format('truetype-variations');
+    font-weight: 22 188;
+    font-stretch: 300% 500%;
+    --in-canvas: true;
+}
+
+@font-face {
+    font-family: 'Cabin';
+    src: url('./assets/Cabin[wdth,wght].ttf') format('truetype-variations');
+    font-weight: 95 128;
+    font-stretch: 0% 100%;
+    --in-canvas: true;
+}
+
+@font-face {
+    font-family: 'Emberly';
+    src: url('./assets/Emberly[wdth,wght].ttf') format('truetype-variations');
+    font-weight: 100 900;
+    font-stretch: 75% 100%;
+    --in-canvas: true;
+}
+
+@font-face {
+    font-family: 'Epilogue';
+    src: url('./assets/Epilogue[wght].ttf') format('truetype-variations');
+    font-weight: 100 900;
+    --in-canvas: true;
+}
+
+@font-face {
+    font-family: 'IBMPlexSans';
+    src: url('./assets/IBMPlexSansVar-Roman.ttf') format('truetype-variations');
+    font-weight: 100 700;
+    font-stretch: 85% 100%;
+    --in-canvas: true;
+}
+
+@font-face {
+    font-family: 'Inconsolata';
+    src: url('./assets/Inconsolata[wdth,wght].ttf') format('truetype-variations');
+    font-weight: 275 900;
+    font-stretch: 50% 200%;
+    --in-canvas: true;
+}
+
+
 :root {
     --main-bg-color: #f3f3f3;
 }
@@ -17,6 +81,8 @@ body > * {
     order: 1;
 }
 
+
+
 #error-handle {
     order: 0;
 }
@@ -24,6 +90,7 @@ body > * {
 #error-handle-inner {
     padding-bottom: 0 !important;
     margin-bottom: 0 !important;
+    z-index: 1000;
 }
 
 .mr-2 {
@@ -71,5 +138,4 @@ init-form {
     min-height: 100vh;
     overflow-y:scroll;
     overflow-x:hidden;
-    z-index:10;
 }
