--- a/src/client/main.css
+++ b/src/client/main.css
@@ -1,3 +1,8 @@
+:root {
+    --main-bg-color: #f3f3f3;
+    --header-height: 90px;
+}
+
 @font-face {
     font-family: 'Amstelvar';
     src: url('./assets/Amstelvar-Roman[wdth,wght,opsz].ttf') format('truetype-variations');
@@ -62,11 +67,6 @@
 }
 
 
-:root {
-    --main-bg-color: #f3f3f3;
-}
-
-
 html, main {
     background-color: var(--main-bg-color);
 }
@@ -114,7 +114,7 @@ h4 {
 
 .initial-Form-outer {
     background: rgba(0,0,0, 0.5);
-    top:0;
+    top:var(--header-height);
     right:0;
     position: fixed;
     overflow-y:scroll;
@@ -122,7 +122,7 @@ h4 {
 }
 
 .initial-Form-inner {
-    height: 100vh;
+    height: calc(100vh - var(--header-height));
     overflow-y:scroll;
     overflow-x:hidden;
 }
@@ -138,4 +138,11 @@ init-form {
     min-height: 100vh;
     overflow-y:scroll;
     overflow-x:hidden;
+}
+
+
+
+#header-container {
+    background: var(--main-bg-color);
+    height: var(--header-height);
 }
